[package]
name = "nexrad-volumetric-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-smithy-http = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
aws-sig-auth = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "main" }
